--- a/views/admin/adminPage/adminSignin.pug
+++ b/views/admin/adminPage/adminSignin.pug
@@ -31,5 +31,21 @@ block content
                   .controls
                     button.btn(type='submit') Sign in
                     a(href='forgetpass.html') Forget password?
+          //- Neu them vao can thay doi name va password
+          .span4
+            .well
+              h5 CREATE YOUR ACCOUNT
+              br
+              form(action='/admin/signin/create', method="POST")
+                .control-group
+                  label.control-label(for='inputEmail0') Email
+                  .controls
+                    input#inputEmail0.span3(type='text', name='emailCreate', placeholder='Email')
+                .control-group
+                  label.control-label(for="password") Password
+                  .controls
+                    input#password.span3(type="password", name='passwordCreate', placeholder='Password')
+                .controls
+                  button.btn.block(type='submit') Create Admin Account
   // Footer ==========================================================
   //include ../layout/footer.pug
