--- a/views/page/index.pug
+++ b/views/page/index.pug
@@ -31,8 +31,7 @@ block content
         .span9
           .well.well-small
             h4
-              | Featured Products 
-              small.pull-right 20+ featured products
+              | Latest Products
             .row-fluid
               #featured.carousel.slide
                 .carousel-inner
@@ -42,30 +41,30 @@ block content
                         li.span3
                           .thumbnail
                             i.tag
-                            a(href='/product-details/' + featuredproducts[j].id)
-                              img(src=featuredproducts[j].img, alt='')
+                            a(href='/product-details/' + newproducts[j].id)
+                              img(src=newproducts[j].img, alt='')
                             .caption
-                              h5=featuredproducts[j].name
+                              h5=newproducts[j].name
                               h4
-                                a.btn(href='/product-details/' + featuredproducts[i].id) VIEW
-                                span.pull-right $#{featuredproducts[j].price}
-                  //-for(var z=1; z< featuredproducts.length:4,z++)
-                  .item
-                    ul.thumbnails
-                      -for(j; j< 8; j++)
-                        li.span3
-                          .thumbnail
-                            i.tag
-                            a(href='/product-details/' + featuredproducts[j].id)
-                              img(src=featuredproducts[j].img, alt='')
-                            .caption
-                              h5=featuredproducts[j].name
-                              h4
-                                a.btn(href='/product-details/' + featuredproducts[j].id) VIEW
-                                span.pull-right $#{featuredproducts[j].price}
+                                a.btn.btn-warning(href='/product-details/' + newproducts[j].id) VIEW
+                                span.pull-right $#{newproducts[j].price}
+                  if newproducts.length > 4
+                    .item
+                      ul.thumbnails
+                        -for(j=4; j< 8; j++)
+                          li.span3
+                            .thumbnail
+                              i.tag
+                              a(href='/product-details/' + newproducts[j].id)
+                                img(src=newproducts[j].img, alt='')
+                              .caption
+                                h5=newproducts[j].name
+                                h4
+                                  a.btn.btn-warning(href='/product-details/' + newproducts[j].id) VIEW
+                                  span.pull-right $#{newproducts[j].price}
                 a.left.carousel-control(href='#featured', data-slide='prev') &lsaquo;
                 a.right.carousel-control(href='#featured', data-slide='next') &rsaquo;
-          h4 Latest Products 
+          h4 Products 
           ul.thumbnails
             each product in products
               li.span3
@@ -74,13 +73,41 @@ block content
                     img(src=product.img, alt='')
                   .caption
                     h5=product.name
-                    p=product.description
+                    p=product.supplier
                     h4(style='text-align:center')
                       a.btn(href='/product-details/' + product.id)
                         i.icon-zoom-in
-                      a.btn(href='/cart/add/'+product.id)
+                      a.btn.btn-success(href='/cart/add/'+product.id)
                         | Add to 
                         i.icon-shopping-cart
-                      a.btn.btn-primary(href='#') $#{product.price}
+                      a.btn.btn-danger(href='#') $#{product.price}
+          hr.soft
+          //Pagination(Phan trang)
+          - var lowerLimit = (parseInt((page - 1)/3) * 3) + 1;
+          - var startPage = lowerLimit-1;
+          // (page-1) la trang dau tien xuat hien cua 3 trang (vd 1,2,3)
+          .pagination
+            ul
+              if(page > 1)
+                li
+                  a(href='/'+`${baseUrl ? baseUrl : '?'}`+'page='+(page-1)) Previous
+              else
+                li
+                  a(href='#') Previous
+              each i in [1, 2, 3]
+                if( total > startPage*perPage)
+                  - startPage = startPage + 1;
+                    if(page !== startPage)
+                      li
+                        a(href='/'+`${baseUrl ? baseUrl : '?'}`+'page='+startPage style ={ 'color':'blue'}) #{startPage}
+                    else
+                      li
+                        a(href='/'+`${baseUrl ? baseUrl : '?'}`+'page='+startPage style ={ 'color':'white', 'background-color':'#0099ff' }) #{startPage}
+              if(page < total/perPage)
+                li
+                  a(href='/'+`${baseUrl ? baseUrl : '?'}`+'page='+(page+1)) Next
+              else
+                li
+                  a(href='#') Next
   // Footer ==================================================================
   include ../layout/footer.pug
