--- a/views/admin/layout/header.pug
+++ b/views/admin/layout/header.pug
@@ -40,7 +40,7 @@ head
           li
             a(href='/admin/users') USERS
           li
-            a(href='/admin/orders') ORDERS[3]
+            a(href='/admin/orders') ORDERS[ #{numberOfOrders} ]
           li
             a(href='/admin/logout', role='button', data-toggle='modal', style='padding-right:0')
               span.btn.btn-large.btn-success Logout
