--- a/views/page/contact.pug
+++ b/views/page/contact.pug
@@ -36,26 +36,13 @@ block content
             | 1:30pm - 06:00pm
             br
             br
-        //- .span4
-        //-   h4 Email Us
-        //-   form.form-horizontal
-        //-     fieldset
-        //-       .control-group
-        //-         input.input-xlarge(type='text', placeholder='name')
-        //-       .control-group
-        //-         input.input-xlarge(type='text', placeholder='email')
-        //-       .control-group
-        //-         input.input-xlarge(type='text', placeholder='subject')
-        //-       .control-group
-        //-         textarea#textarea.input-xlarge(rows='3')
-        //-       button.btn.btn-large(type='submit') Send Messages
       .row
         .span12
-          iframe(style='width:100%; height:300; border: 0px', scrolling='no', src='https://www.google.com/maps/place/Tr%C6%B0%E1%BB%9Dng+%C4%90%E1%BA%A1i+h%E1%BB%8Dc+B%C3%A1ch+khoa+H%C3%A0+N%E1%BB%99i/@21.0070928,105.8400532,17.25z/data=!4m13!1m7!3m6!1s0x31157a4d736a1e5f:0xb03bb0c9e2fe62be!2zVmnhu4d0IE5hbQ!3b1!8m2!3d14.058324!4d108.277199!3m4!1s0x3135ac76ccab6dd7:0x55e92a5b07a97d03!8m2!3d21.0055547!4d105.8434626')
-          br
           small
             a(href='https://www.google.com/maps/place/Hanoi+University+of+Science+and+Technology/@21.0059282,105.8422631,17.75z/data=!4m12!1m6!3m5!1s0x3135ac76ccab6dd7:0x55e92a5b07a97d03!2sHanoi+University+of+Science+and+Technology!8m2!3d21.0055546!4d105.8434628!3m4!1s0x3135ac76ccab6dd7:0x55e92a5b07a97d03!8m2!3d21.0055546!4d105.8434628?hl=en', style='color:#0000FF;text-align:left') 
               p(style={ 'font-size' :'20px'}) 
                 strong View Larger Map
+          br
+          img(src='themes/images/contact.png', style='width:100%; height:500px; border: 0px')
   // Footer ==================================================
   include ../layout/footer.pug
