--- a/views/layout/header.pug
+++ b/views/layout/header.pug
@@ -19,7 +19,9 @@ head
   link(rel='apple-touch-icon-precomposed', sizes='114x114', href='themes/images/ico/apple-touch-icon-114-precomposed.png')
   link(rel='apple-touch-icon-precomposed', sizes='72x72', href='themes/images/ico/apple-touch-icon-72-precomposed.png')
   link(rel='apple-touch-icon-precomposed', href='themes/images/ico/apple-touch-icon-57-precomposed.png')
-  style#enject(type='text/css').
+  style#enject(type='text/css')
+  //Bootstrap CDN
+  //link(rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous")
 #header
   .container
     #welcomeLine.row
@@ -57,11 +59,13 @@ head
             a(href='/cart/checkout') CART
           li
             a(href='/contact') CONTACT
-          li
-            a(href='/signin', role='button', data-toggle='modal', style='padding-right:0')
-              span.btn.btn-large.btn-success Login
-          li
-            a(href='/logout', role='button', data-toggle='modal', style='padding-right:0')
-              span.btn.btn-large.btn-success Logout
+          if !email
+            li
+              a(href='/signin', role='button', data-toggle='modal', style='padding-right:0')
+                span.btn.btn-large.btn-success Login
+          else 
+            li
+              a(href='/logout', role='button', data-toggle='modal', style='padding-right:0')
+                span.btn.btn-large.btn-success Logout
 // Header End======================================================================
 block content
