--- a/views/page/index.pug
+++ b/views/page/index.pug
@@ -47,7 +47,7 @@ block content
                               h5=newproducts[j].name
                               h4
                                 a.btn.btn-warning(href='/product-details/' + newproducts[j].id) VIEW
-                                span.pull-right $#{newproducts[j].price}
+                                span.pull-right K₫ #{newproducts[j].price}
                   if newproducts.length > 4
                     .item
                       ul.thumbnails
@@ -61,7 +61,7 @@ block content
                                 h5=newproducts[j].name
                                 h4
                                   a.btn.btn-warning(href='/product-details/' + newproducts[j].id) VIEW
-                                  span.pull-right $#{newproducts[j].price}
+                                  span.pull-right K₫ #{newproducts[j].price}
                 a.left.carousel-control(href='#featured', data-slide='prev') &lsaquo;
                 a.right.carousel-control(href='#featured', data-slide='next') &rsaquo;
           h4 Products 
@@ -80,7 +80,7 @@ block content
                       a.btn.btn-success(href='/cart/add/'+product.id)
                         | Add to 
                         i.icon-shopping-cart
-                      a.btn.btn-danger(href='#') $#{product.price}
+                      a.btn.btn-danger(href='#') K₫ #{product.price}
           hr.soft
           //Pagination(Phan trang)
           - var lowerLimit = (parseInt((page - 1)/3) * 3) + 1;
